--- a/package.json
+++ b/package.json
@@ -1,5 +1,28 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "express": "^4.18.2",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.1",
+    "redis": "^4.6.6"
+  },
+  "name": "node_express",
+  "description": "",
+  "version": "1.0.0",
+  "main": "App.js",
+  "directories": {
+    "example": "examples"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ftrucco01/node_express.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ftrucco01/node_express/issues"
+  },
+  "homepage": "https://github.com/ftrucco01/node_express#readme"
 }
